@@ -1,82 +1,144 @@
 package com.example.search.service;
 
-import com.example.search.model.Book;
-import com.example.search.model.SearchQuery;
+import com.example.search.config.MongoConfig;
+import com.example.search.model.BookInfo;
+import com.example.search.model.SearchFilters;
+import com.example.search.model.SearchResult;
 import com.example.search.repository.InvertedIndexRepository;
+import com.example.search.repository.MetadataRepository;
+import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
+@Service
 public class SearchService {
-    private static final Logger logger = LoggerFactory.getLogger(SearchService.class);
+    private final Logger logger = LoggerFactory.getLogger(SearchService.class);
 
-    private final InvertedIndexRepository repository;
+    @Autowired
+    private MongoConfig mongoConfig;
 
-    public SearchService(InvertedIndexRepository repository) {
-        this.repository = repository;
+    @Autowired
+    private InvertedIndexRepository invertedIndexRepository;
+
+    @Autowired
+    private MetadataRepository metadataRepository;
+
+    @PostConstruct
+    public void initialize() {
+        logger.info("Initializing SearchService...");
+
+        invertedIndexRepository.initialize(
+                mongoConfig.getMongoUri(),
+                mongoConfig.getInvertedIndexDatabase(),
+                mongoConfig.getInvertedIndexCollection()
+        );
+
+        metadataRepository.initialize(
+                mongoConfig.getMongoUri(),
+                mongoConfig.getMetadataDatabase(),
+                mongoConfig.getMetadataCollection()
+        );
+
+        logger.info("SearchService initialized successfully");
     }
 
-    public List<Book> search(SearchQuery query) {
-        logger.info("Searching for: {}", query.getQuery());
+    public SearchResult search(String query, SearchFilters filters) {
+        logger.info("Search request - query: '{}', filters: {}", query, filtersToString(filters));
 
-        Set<Integer> bookIds = repository.searchTerm(query.getQuery());
+        Set<Integer> bookIds = invertedIndexRepository.findBookIdsByTerm(query);
 
         if (bookIds.isEmpty()) {
-            logger.info("No results found for term: {}", query.getQuery());
-            return Collections.emptyList();
+            logger.info("No books found for query '{}'", query);
+            return new SearchResult(query, buildFiltersMap(filters), 0, List.of());
         }
 
-        List<Book> books = repository.getBooks(bookIds);
-        List<Book> filteredBooks = applyFilters(books, query);
+        logger.debug("Found {} candidate books from inverted index", bookIds.size());
 
-        filteredBooks.sort(Comparator.comparingInt(Book::getBookId));
+        List<BookInfo> candidateBooks = metadataRepository.findBooksByIds(bookIds);
+        List<BookInfo> filteredBooks = applyFilters(candidateBooks, filters);
 
-        logger.info("Found {} results", filteredBooks.size());
-        return filteredBooks;
+        filteredBooks.sort(Comparator.comparingInt(BookInfo::getBookId));
+
+        logger.info("Search completed - query: '{}', results: {}", query, filteredBooks.size());
+
+        return new SearchResult(
+                query,
+                buildFiltersMap(filters),
+                filteredBooks.size(),
+                filteredBooks
+        );
     }
 
-    private List<Book> applyFilters(List<Book> books, SearchQuery query) {
+    private List<BookInfo> applyFilters(List<BookInfo> books, SearchFilters filters) {
+        if (filters == null || !filters.hasAnyFilter()) {
+            return books;
+        }
+
         return books.stream()
-                .filter(book -> matchesAuthor(book, query.getAuthor()))
-                .filter(book -> matchesLanguage(book, query.getLanguage()))
-                .filter(book -> matchesYear(book, query.getYear()))
+                .filter(book -> matchesFilters(book, filters))
                 .collect(Collectors.toList());
     }
 
-    private boolean matchesAuthor(Book book, String author) {
-        if (author == null || author.isBlank()) {
-            return true;
+    private boolean matchesFilters(BookInfo book, SearchFilters filters) {
+        if (filters.hasAuthor()) {
+            if (book.getAuthor() == null ||
+                    !book.getAuthor().toLowerCase().contains(filters.getAuthor().toLowerCase())) {
+                return false;
+            }
         }
-        return book.getAuthor() != null &&
-                book.getAuthor().toLowerCase().contains(author.toLowerCase());
-    }
 
-    private boolean matchesLanguage(Book book, String language) {
-        if (language == null || language.isBlank()) {
-            return true;
+        if (filters.hasLanguage()) {
+            if (book.getLanguage() == null ||
+                    !book.getLanguage().equalsIgnoreCase(filters.getLanguage())) {
+                return false;
+            }
         }
-        return book.getLanguage() != null &&
-                book.getLanguage().equalsIgnoreCase(language);
-    }
 
-    private boolean matchesYear(Book book, Integer year) {
-        if (year == null) {
-            return true;
+        if (filters.hasYear()) {
+            if (book.getYear() == null || !book.getYear().equals(filters.getYear())) {
+                return false;
+            }
         }
-        return book.getYear() == year;
+
+        return true;
     }
 
-    public void refreshIndex() {
-        logger.info("Refreshing search index");
-        repository.refresh();
+    private Map<String, Object> buildFiltersMap(SearchFilters filters) {
+        Map<String, Object> filtersMap = new HashMap<>();
+
+        if (filters != null) {
+            if (filters.hasAuthor()) filtersMap.put("author", filters.getAuthor());
+            if (filters.hasLanguage()) filtersMap.put("language", filters.getLanguage());
+            if (filters.hasYear()) filtersMap.put("year", filters.getYear());
+        }
+
+        return filtersMap;
     }
 
-    public Map<String, Object> getStats() {
-        Map<String, Object> stats = new HashMap<>();
-        stats.put("indexed_terms", repository.getIndexSize());
-        stats.put("total_books", repository.getBookCount());
-        return stats;
+    private String filtersToString(SearchFilters filters) {
+        if (filters == null || !filters.hasAnyFilter()) {
+            return "none";
+        }
+
+        List<String> parts = new ArrayList<>();
+        if (filters.hasAuthor()) parts.add("author=" + filters.getAuthor());
+        if (filters.hasLanguage()) parts.add("language=" + filters.getLanguage());
+        if (filters.hasYear()) parts.add("year=" + filters.getYear());
+
+        return String.join(", ", parts);
+    }
+
+    @PreDestroy
+    public void cleanup() {
+        logger.info("Shutting down SearchService...");
+        invertedIndexRepository.close();
+        metadataRepository.close();
+        logger.info("SearchService shut down successfully");
     }
 }
